Fixed spacing after rebase

--- a/ui/packages/catalog-ui-search/src/main/webapp/component/filter/filter.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/filter/filter.less
@@ -78,6 +78,13 @@
   }
 }
 
+@{customElementNamespace}filter.is-range {
+  > .filter-input {
+    min-width: 10 * @minimumFontSize;
+    height: auto;
+  }
+}
+
 @{customElementNamespace}filter.is-empty {
   > .filter-input {
     display: none;
